<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ke.go.kra.registration.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/txtLessonTwo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:text="@string/name"
        android:id="@+id/txtName"
        android:layout_below="@+id/txtLessonTwo" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:hint="@string/editFNameHint"
        android:layout_below="@+id/txtName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:text="@string/school"
        android:id="@+id/txtSchool"
        android:layout_below="@+id/editName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/faculty_of_science"
        android:id="@+id/editSchool"
        android:layout_below="@+id/txtSchool" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/department"
        android:paddingLeft="2dp"
        android:id="@+id/txtDept"
        android:layout_below="@+id/editSchool" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/computer_science"
        android:id="@+id/editDept"
        android:layout_below="@+id/txtDept" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/editDept"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
